@@ -51,6 +51,7 @@ import org.marc4j.marc.DataField;
 import org.marc4j.marc.MarcFactory;
 import org.marc4j.marc.Subfield;
 import org.marc4j.marc.VariableField;
+import org.marc4j.marc.impl.Verifier;
 
 /**
  * Util to work with additional fields
@@ -68,7 +69,7 @@ public final class AdditionalFieldsUtil {
   public static final char TAG_035_SUB = 'a';
   private static final char TAG_035_IND = ' ';
   private static final String ANY_STRING = "*";
-  private static final char INDICATOR = 'f';
+  public static final char INDICATOR_F = 'f';
   public static final char SUBFIELD_I = 'i';
   public static final char SUBFIELD_L = 'l';
   private static final String HR_ID_FIELD = "hrid";
@@ -77,6 +78,7 @@ public final class AdditionalFieldsUtil {
   private static final String OCLC_PREFIX = "(OCoLC)";
   private static final ObjectMapper objectMapper = new ObjectMapper();
   public static final String FIELDS = "fields";
+  static final String INVALID_DATA_FIELD_MSG = "Field '%s' is not a data field.";
 
   static {
     // this function is executed when creating a new item to be saved in the cache.
@@ -150,14 +152,14 @@ public final class AdditionalFieldsUtil {
           VariableField variableField = getSingleFieldByIndicators(marcRecord.getVariableFields(field));
           DataField dataField;
           if (variableField != null
-            && ((DataField) variableField).getIndicator1() == INDICATOR
-            && ((DataField) variableField).getIndicator2() == INDICATOR
+            && ((DataField) variableField).getIndicator1() == INDICATOR_F
+            && ((DataField) variableField).getIndicator2() == INDICATOR_F
           ) {
             dataField = (DataField) variableField;
             marcRecord.removeVariableField(variableField);
             dataField.removeSubfield(dataField.getSubfield(subfield));
           } else {
-            dataField = factory.newDataField(field, INDICATOR, INDICATOR);
+            dataField = factory.newDataField(field, INDICATOR_F, INDICATOR_F);
           }
           dataField.addSubfield(factory.newSubfield(subfield, value));
           marcRecord.addVariableField(dataField);
@@ -338,22 +340,19 @@ public final class AdditionalFieldsUtil {
     return null;
   }
 
-  public static Optional<String> getValue(Record srcRecord, String tag, char subfield) {
-      return Optional.ofNullable(computeMarcRecord(srcRecord))
-        .stream()
-        .flatMap(marcRecord -> marcRecord.getVariableFields(tag).stream())
-        .flatMap(field -> getFieldValue(field, subfield).stream())
-        .findFirst();
-  }
-
-  private static Optional<String> getFieldValue(VariableField field, char subfield) {
-    if (field instanceof DataField dataField) {
-      return dataField.getSubfields(subfield).stream().findFirst().map(Subfield::getData);
-    } else if (field instanceof ControlField controlField) {
-      return Optional.ofNullable(controlField.getData());
-    } else {
-      return Optional.empty();
+  public static Optional<String> getValueFromDataField(Record srcRecord, String tag, char ind1, char ind2, char subfield) {
+    if (Verifier.isControlField(tag)) {
+      String msg = INVALID_DATA_FIELD_MSG.formatted(tag);
+      LOGGER.warn("getValueFromDataField:: {}", msg);
+      throw new IllegalArgumentException(msg);
     }
+
+    return Optional.ofNullable(computeMarcRecord(srcRecord))
+      .stream()
+      .flatMap(marcRecord -> marcRecord.getDataFields().stream())
+      .filter(df -> df.getTag().equals(tag) && df.getIndicator1() == ind1 && df.getIndicator2() == ind2)
+      .findFirst()
+      .flatMap(df -> df.getSubfields(subfield).stream().findFirst().map(Subfield::getData));
   }
 
   private static MarcReader buildMarcReader(Record srcRecord) {
@@ -366,7 +365,7 @@ public final class AdditionalFieldsUtil {
       return null;
     }
     return list.stream()
-      .filter(f -> ((DataField) f).getIndicator1() == INDICATOR && ((DataField) f).getIndicator2() == INDICATOR)
+      .filter(f -> ((DataField) f).getIndicator1() == INDICATOR_F && ((DataField) f).getIndicator2() == INDICATOR_F)
       .findFirst()
       .orElse(null);
   }
@@ -387,7 +386,7 @@ public final class AdditionalFieldsUtil {
         org.marc4j.marc.Record marcRecord = reader.next();
         List<VariableField> variableFields = marcRecord.getVariableFields(TAG_005);
         if(!variableFields.isEmpty()) {
-          VariableField field = variableFields.get(0);
+          VariableField field = variableFields.getFirst();
           needToUpdate = isNotProtected(fieldProtectionSettings, (ControlField) field);
         }
       }
